# Roll-Shooting

./: .gitignore  CMakeLists.txt
Source/: pdex.dylib
src/: main.c
src/bullet/: bullet_manager.c
src/bullet/include/: bullet.h  bullet_manager.h
src/core/: CMakeLists.txt  ball_core.c  math_util.c  util.c
src/core/include/: ball_core.h  collision_defines.h  defines.h  log.h  math_util.h  util.h  vec2.h
src/enemy/: enemy_manager.c
src/enemy/include/: enemy_manager.h
src/gamepd/: ball_pd.c  player_pd.c
src/gamepd/include/: ball_pd.h
src/pd/: pd_util.c
src/pd/include/: pd_util.h
src/player/: player.c
src/player/include/: player.h
test/: CMakeLists.txt
test/src/: math_util_test.cpp  test.cpp
